[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.1"
tauri-plugin-store = "2"
tauri-plugin-updater = "2.1"
reqwest = {version = "0.12", features = ["json"] }
tokio = {version = "1", features = ["full"] }
bytes = { version = "1"}
image = "0.25"
serde_with = {version = "3.2.0", features = ["chrono"] }
chrono = {version = "0.4.26"}
log = "^0.4"
user_agent = "0.11"
os_info = "3.7.0"
webbrowser = "0.8.11"
url = "2.4.0"
keyring = "2.0.5"
futures = "0.3.29"
dotenv = "0.15.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"
tiny_http = "0.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
