[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "dialog-all", "updater"] }
reqwest = {version = "0.11", features = ["json"] }
tokio = {version = "1", features = ["full"] }
bytes = { version = "1"}
image = "0.24.6"
serde_with = {version = "3.2.0", features = ["chrono"] }
chrono = {version = "0.4.26"}
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
user_agent = "0.11"
os_info = "3.7.0"
webbrowser = "0.8.11"
tiny_http = "0.12"
url = "2.4.0"
keyring = "2.0.5"
futures = "0.3.29"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
